feat(ocf-application): update localization files

--- a/lang/es.json
+++ b/lang/es.json
@@ -749,12 +749,15 @@
   "error.contactSupport": "Contactar con el soporte",
   "error.details": "Detalle del error",
   "error.email.invalid": "correo electrónico inválido",
+  "error.existingHost.description": "This collective is already hosted by {hostName}.",
   "Error.FieldCheckRequired": "This must be checked",
   "Error.FieldRequired": "Este campo es obligatorio",
   "error.goBack": "Volver a la página anterior",
   "error.name.invalid": "Nombre es requerido",
   "Error.Network": "Se ha producido un error de red. Por favor, inténtelo de nuevo",
   "error.reload": "Recargar página",
+  "error.title": "Validation Failed",
+  "error.unauthorized.description": "You have to be an admin of {name} to apply with this initiative.",
   "error.unexpected": "Ooops, parece que ha ocurrido un error inesperado",
   "Error.Unknown": "Se ha producido un error desconocido",
   "error.website.invalid": "Dirección del sitio web incorrecta",
