--- a/lang/fr.json
+++ b/lang/fr.json
@@ -749,12 +749,15 @@
   "error.contactSupport": "Contacter le support",
   "error.details": "Détails de l’erreur",
   "error.email.invalid": "Adresse email invalide",
+  "error.existingHost.description": "This collective is already hosted by {hostName}.",
   "Error.FieldCheckRequired": "Cette case doit être cochée",
   "Error.FieldRequired": "Ce champ est requis",
   "error.goBack": "Revenir à la page précédente",
   "error.name.invalid": "Le nom est requis",
   "Error.Network": "Une erreur réseau est survenue, veuillez réessayer",
   "error.reload": "Recharger la page",
+  "error.title": "Validation Failed",
+  "error.unauthorized.description": "You have to be an admin of {name} to apply with this initiative.",
   "error.unexpected": "Oups, une erreur inattendue est survenue",
   "Error.Unknown": "Une erreur inconnue est survenue",
   "error.website.invalid": "Adresse invalide",
