--- a/lang/pt.json
+++ b/lang/pt.json
@@ -749,12 +749,15 @@
   "error.contactSupport": "Contate o suporte",
   "error.details": "Detalhes do erro",
   "error.email.invalid": "Endereço de email inválido",
+  "error.existingHost.description": "This collective is already hosted by {hostName}.",
   "Error.FieldCheckRequired": "This must be checked",
   "Error.FieldRequired": "Este campo é obrigatório",
   "error.goBack": "Voltar à pagina anterior",
   "error.name.invalid": "Nome é obrigatório",
   "Error.Network": "Ocorreu um erro de rede, por favor tente novamente",
   "error.reload": "Recarregue a página",
+  "error.title": "Validation Failed",
+  "error.unauthorized.description": "You have to be an admin of {name} to apply with this initiative.",
   "error.unexpected": "Opa, um erro inesperado aconteceu",
   "Error.Unknown": "Ocorreu um erro desconhecido",
   "error.website.invalid": "Site inválido",
