--- a/lang/ru.json
+++ b/lang/ru.json
@@ -749,12 +749,15 @@
   "error.contactSupport": "Обратитесь в службу поддержки",
   "error.details": "Подробные сведения об ошибке",
   "error.email.invalid": "Некорректный email",
+  "error.existingHost.description": "This collective is already hosted by {hostName}.",
   "Error.FieldCheckRequired": "This must be checked",
   "Error.FieldRequired": "Это поле обязательно",
   "error.goBack": "Вернуться на предыдущую страницу",
   "error.name.invalid": "Требуется имя",
   "Error.Network": "Произошла ошибка сети, попробуйте еще раз",
   "error.reload": "Перезагрузить страницу",
+  "error.title": "Validation Failed",
+  "error.unauthorized.description": "You have to be an admin of {name} to apply with this initiative.",
   "error.unexpected": "Вот ведь незадача! Произошла неведомая ошибка",
   "Error.Unknown": "Произошла неизвестная ошибка",
   "error.website.invalid": "Неправильный адрес сайта",
