--- a/lang/fr.json
+++ b/lang/fr.json
@@ -964,6 +964,7 @@
   "goal.title.label": "Titre",
   "goal.type.label": "Type",
   "Goals": "Objectifs",
+  "GuestForm.contributeAsOrg": "Want to contribute as an organization?",
   "guestJoin.contactSupport": "Veuillez contacter le <SupportLink>support</SupportLink> pour obtenir plus d'informations sur la procédure de réclamation de votre compte. Vous devrez joindre cet identifiant de commande à votre demande : {orderId}",
   "guestJoin.noEmail": "Nous n'avons trouvé aucune contribution attachée à ce navigateur.",
   "guestJoin.otherProfilesFound": "Nous avons trouvé {count} e-mails que vous avez utilisés pour contribuer",
@@ -1211,16 +1212,15 @@
   "NewContributionFlow.FAQ.Secure.Title": "Ma contribution est-elle sécurisée ?",
   "NewContributionFlow.InTheMeantime": "En attendant, vous pouvez suivre {collective} et voir comment ils dépensent l'argent <CollectiveLink>sur leur page de collectif</CollectiveLink>.",
   "NewContributionFlow.Join": "Rejoignez {numberOfContributors} contributeurs",
-  "NewContributionFlow.JoinAndGoNext": "Rejoindre et continuer",
   "NewContributionFlow.NumberOfFinancialContributors": "{contributors} contributeurs financiers",
   "NewContributionFlow.PaymentInstructions": "Instructions de paiement",
   "NewContributionFlow.PendingContribution": "Contribution en attente",
   "NewContributionFlow.ProtectTransactionDetails": "Avec Open Collective, votre transaction est sécurisée. <link>En savoir plus</link>.",
   "NewContributionFlow.ProtectTransactionTitle": "Nous protégeons votre transaction :",
   "NewContributionFlow.step.contributeAsGuest": "Contribuer en tant qu'invité·e",
-  "NewContributionFlow.step.SignUpToContribute": "Inscrivez-vous pour contribuer de façon récurrente",
   "NewContributionFlow.Success.CTA.Join.Content": "Créez un compte et affichez toutes vos contributions à la communauté.",
   "NewContributionFlow.Success.CTA.Read.Content": "Open Collective vise à favoriser la transparence et la durabilité dans les communautés du monde entier. Voyez comment vous pourriez participer.",
+  "NewContributionFlow.Success.CTA.SignIn.Content": "Sign in with your Open Collective account to edit your profile and manage your contributions.",
   "NewContributionFlow.Success.DiscoverMore": "Découvrez plus de Collectifs comme {collective} →",
   "NewContributionFlow.Success.Header": "Merci ! 🎉",
   "NewContributionFlow.Success.NowSupporting": "Vous soutenez maintenant {collective}.",
@@ -1619,6 +1619,7 @@
   "signin.unknownEmail": "Il n'y a aucun utilisateur avec cette adresse e-mail.",
   "signin.usingEmail": "Connectez-vous avec votre adresse email :",
   "signinLinkSent.": "<Link>En savoir plus</Link> sur la connexion sans mot de passe.",
+  "signInOrJoinFree": "Sign in or join free",
   "SkipOnboarding": "Ignorer l'introduction",
   "SortBy": "Trier par",
   "SpteProfile.EmailNoSpam": "Nous n'enverrons pas de spam ou de publicité, c'est promis.",
