--- a/lang/uk.json
+++ b/lang/uk.json
@@ -964,6 +964,7 @@
   "goal.title.label": "Назва",
   "goal.type.label": "Тип",
   "Goals": "Цілі",
+  "GuestForm.contributeAsOrg": "Want to contribute as an organization?",
   "guestJoin.contactSupport": "Please contact <SupportLink>support</SupportLink> to get more info on the procedure to claim your account. Please attach this order id to your request: {orderId}",
   "guestJoin.noEmail": "We could not find any contributions attached to this browser.",
   "guestJoin.otherProfilesFound": "We found {count} emails that you used to contribute",
@@ -1211,16 +1212,15 @@
   "NewContributionFlow.FAQ.Secure.Title": "Is my contribution secure?",
   "NewContributionFlow.InTheMeantime": "In the meantime, you can follow {collective} and see how they are spending the money <CollectiveLink>on their collective page</CollectiveLink>.",
   "NewContributionFlow.Join": "Join {numberOfContributors} other fellow contributors",
-  "NewContributionFlow.JoinAndGoNext": "Join and go next",
   "NewContributionFlow.NumberOfFinancialContributors": "{contributors} financial contributors",
   "NewContributionFlow.PaymentInstructions": "Payment instructions",
   "NewContributionFlow.PendingContribution": "Pending contribution",
   "NewContributionFlow.ProtectTransactionDetails": "У Open Collective, ваша транзакція безпечна. <link>Дізнатися більше</link>.",
   "NewContributionFlow.ProtectTransactionTitle": "We protect your transaction:",
   "NewContributionFlow.step.contributeAsGuest": "Підтримати як гість",
-  "NewContributionFlow.step.SignUpToContribute": "Sign up to contribute recurrently",
   "NewContributionFlow.Success.CTA.Join.Content": "Create an account and show all your contributions to the community.",
   "NewContributionFlow.Success.CTA.Read.Content": "Мета Open Collective — сприяти прозорості та стійкості в спільнотах по всьому світу. Перегляньте як ви можете взяти участь.",
+  "NewContributionFlow.Success.CTA.SignIn.Content": "Sign in with your Open Collective account to edit your profile and manage your contributions.",
   "NewContributionFlow.Success.DiscoverMore": "Знайдіть більше колективів, подібних до {collective}→",
   "NewContributionFlow.Success.Header": "Спасибі! 🎉",
   "NewContributionFlow.Success.NowSupporting": "Тепер ви підтримуєте {collective}.",
@@ -1619,6 +1619,7 @@
   "signin.unknownEmail": "There is no user with this email address.",
   "signin.usingEmail": "Увійти за допомогою адреси електронної пошти:",
   "signinLinkSent.": "<Link>Learn more</Link> about passwordless login.",
+  "signInOrJoinFree": "Sign in or join free",
   "SkipOnboarding": "Skip onboarding",
   "SortBy": "Sort by",
   "SpteProfile.EmailNoSpam": "We won't send any spam or advertising, pinky promise.",
