--- a/lang/ja.json
+++ b/lang/ja.json
@@ -964,6 +964,7 @@
   "goal.title.label": "タイトル",
   "goal.type.label": "タイプ",
   "Goals": "目標",
+  "GuestForm.contributeAsOrg": "Want to contribute as an organization?",
   "guestJoin.contactSupport": "Please contact <SupportLink>support</SupportLink> to get more info on the procedure to claim your account. Please attach this order id to your request: {orderId}",
   "guestJoin.noEmail": "We could not find any contributions attached to this browser.",
   "guestJoin.otherProfilesFound": "We found {count} emails that you used to contribute",
@@ -1211,16 +1212,15 @@
   "NewContributionFlow.FAQ.Secure.Title": "Is my contribution secure?",
   "NewContributionFlow.InTheMeantime": "In the meantime, you can follow {collective} and see how they are spending the money <CollectiveLink>on their collective page</CollectiveLink>.",
   "NewContributionFlow.Join": "Join {numberOfContributors} other fellow contributors",
-  "NewContributionFlow.JoinAndGoNext": "Join and go next",
   "NewContributionFlow.NumberOfFinancialContributors": "{contributors} financial contributors",
   "NewContributionFlow.PaymentInstructions": "Payment instructions",
   "NewContributionFlow.PendingContribution": "Pending contribution",
   "NewContributionFlow.ProtectTransactionDetails": "Open Collectiveでは、お客様のお取引は安全に行われます。詳しくは<link>こちら</link>をご覧ください。",
   "NewContributionFlow.ProtectTransactionTitle": "あなたの取引は安全に保護されています。",
   "NewContributionFlow.step.contributeAsGuest": "Contribute as guest",
-  "NewContributionFlow.step.SignUpToContribute": "Sign up to contribute recurrently",
   "NewContributionFlow.Success.CTA.Join.Content": "Create an account and show all your contributions to the community.",
   "NewContributionFlow.Success.CTA.Read.Content": "Open Collective aims to foster transparency and sustainability in communities around the world. See how you could participate.",
+  "NewContributionFlow.Success.CTA.SignIn.Content": "Sign in with your Open Collective account to edit your profile and manage your contributions.",
   "NewContributionFlow.Success.DiscoverMore": "Discover more Collectives like {collective} →",
   "NewContributionFlow.Success.Header": "Thank you! 🎉",
   "NewContributionFlow.Success.NowSupporting": "You are now supporting {collective}.",
@@ -1619,6 +1619,7 @@
   "signin.unknownEmail": "このメールアドレスを使っているユーザーはいません。",
   "signin.usingEmail": "メールアドレスでログイン:",
   "signinLinkSent.": "パスワードレスログインについての詳細は<Link>こちら</Link>をご覧ください。",
+  "signInOrJoinFree": "Sign in or join free",
   "SkipOnboarding": "Skip onboarding",
   "SortBy": "Sort by",
   "SpteProfile.EmailNoSpam": "We won't send any spam or advertising, pinky promise.",
