--- a/lang/ru.json
+++ b/lang/ru.json
@@ -964,6 +964,7 @@
   "goal.title.label": "Заголовок",
   "goal.type.label": "Тип",
   "Goals": "Цели",
+  "GuestForm.contributeAsOrg": "Want to contribute as an organization?",
   "guestJoin.contactSupport": "Please contact <SupportLink>support</SupportLink> to get more info on the procedure to claim your account. Please attach this order id to your request: {orderId}",
   "guestJoin.noEmail": "We could not find any contributions attached to this browser.",
   "guestJoin.otherProfilesFound": "We found {count} emails that you used to contribute",
@@ -1211,16 +1212,15 @@
   "NewContributionFlow.FAQ.Secure.Title": "Is my contribution secure?",
   "NewContributionFlow.InTheMeantime": "In the meantime, you can follow {collective} and see how they are spending the money <CollectiveLink>on their collective page</CollectiveLink>.",
   "NewContributionFlow.Join": "Join {numberOfContributors} other fellow contributors",
-  "NewContributionFlow.JoinAndGoNext": "Join and go next",
   "NewContributionFlow.NumberOfFinancialContributors": "{contributors} financial contributors",
   "NewContributionFlow.PaymentInstructions": "Payment instructions",
   "NewContributionFlow.PendingContribution": "Pending contribution",
   "NewContributionFlow.ProtectTransactionDetails": "In Open Collective, your transaction is safe. <link>Know more</link>.",
   "NewContributionFlow.ProtectTransactionTitle": "We protect your transaction:",
   "NewContributionFlow.step.contributeAsGuest": "Внести вклад как гость",
-  "NewContributionFlow.step.SignUpToContribute": "Зарегистрируйтесь, чтобы вносить периодический вклад",
   "NewContributionFlow.Success.CTA.Join.Content": "Create an account and show all your contributions to the community.",
   "NewContributionFlow.Success.CTA.Read.Content": "Open Collective aims to foster transparency and sustainability in communities around the world. See how you could participate.",
+  "NewContributionFlow.Success.CTA.SignIn.Content": "Sign in with your Open Collective account to edit your profile and manage your contributions.",
   "NewContributionFlow.Success.DiscoverMore": "Откройте для себя больше таких Коллективов, как {collective}→",
   "NewContributionFlow.Success.Header": "Thank you! 🎉",
   "NewContributionFlow.Success.NowSupporting": "Теперь вы поддерживаете {collective}.",
@@ -1619,6 +1619,7 @@
   "signin.unknownEmail": "Нет пользователя с такой почтой.",
   "signin.usingEmail": "Авторизоваться по электронной почте:",
   "signinLinkSent.": "<Link>Learn more</Link> about passwordless login.",
+  "signInOrJoinFree": "Sign in or join free",
   "SkipOnboarding": "Skip onboarding",
   "SortBy": "Sort by",
   "SpteProfile.EmailNoSpam": "We won't send any spam or advertising, pinky promise.",
