--- a/lang/zh.json
+++ b/lang/zh.json
@@ -964,6 +964,7 @@
   "goal.title.label": "标题",
   "goal.type.label": "类型",
   "Goals": "目标",
+  "GuestForm.contributeAsOrg": "Want to contribute as an organization?",
   "guestJoin.contactSupport": "Please contact <SupportLink>support</SupportLink> to get more info on the procedure to claim your account. Please attach this order id to your request: {orderId}",
   "guestJoin.noEmail": "We could not find any contributions attached to this browser.",
   "guestJoin.otherProfilesFound": "We found {count} emails that you used to contribute",
@@ -1211,16 +1212,15 @@
   "NewContributionFlow.FAQ.Secure.Title": "Is my contribution secure?",
   "NewContributionFlow.InTheMeantime": "In the meantime, you can follow {collective} and see how they are spending the money <CollectiveLink>on their collective page</CollectiveLink>.",
   "NewContributionFlow.Join": "Join {numberOfContributors} other fellow contributors",
-  "NewContributionFlow.JoinAndGoNext": "Join and go next",
   "NewContributionFlow.NumberOfFinancialContributors": "{contributors} financial contributors",
   "NewContributionFlow.PaymentInstructions": "Payment instructions",
   "NewContributionFlow.PendingContribution": "Pending contribution",
   "NewContributionFlow.ProtectTransactionDetails": "在 Open Collective 中，你的交易是安全的。 <link>了解更多</link>。",
   "NewContributionFlow.ProtectTransactionTitle": "We protect your transaction:",
   "NewContributionFlow.step.contributeAsGuest": "作为宾客贡献",
-  "NewContributionFlow.step.SignUpToContribute": "注册以循环贡献",
   "NewContributionFlow.Success.CTA.Join.Content": "Create an account and show all your contributions to the community.",
   "NewContributionFlow.Success.CTA.Read.Content": "Open Collective aims to foster transparency and sustainability in communities around the world. See how you could participate.",
+  "NewContributionFlow.Success.CTA.SignIn.Content": "Sign in with your Open Collective account to edit your profile and manage your contributions.",
   "NewContributionFlow.Success.DiscoverMore": "发现更多的社群，比如 {collective}→",
   "NewContributionFlow.Success.Header": "感谢你！🎉",
   "NewContributionFlow.Success.NowSupporting": "您现在正在支持 {collective}。",
@@ -1619,6 +1619,7 @@
   "signin.unknownEmail": "There is no user with this email address.",
   "signin.usingEmail": "使用你的电子邮件注册：",
   "signinLinkSent.": "<Link>Learn more</Link> about passwordless login.",
+  "signInOrJoinFree": "Sign in or join free",
   "SkipOnboarding": "跳过入职",
   "SortBy": "排序方式",
   "SpteProfile.EmailNoSpam": "We won't send any spam or advertising, pinky promise.",
